--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Create a 2D Numpy array from list of lists\n",
+    "arr2D = np.array([[11, 12, 13],\n",
+    "[14, 15, 16],\n",
+    "[17, 15, 11],\n",
+    "[12, 14, 15]])\n",
+    "\n",
+    "# Find index of minimum value from 2D numpy array\n",
+    "print('List of coordinates of minimum value in Numpy array : ')\n",
+    "# zip the 2 arrays to get the exact coordinates\n",
+    "listOfCordinates = np.where(arr2D == np.amin(arr2D, axis=0))[0]\n",
+    "# travese over the list of cordinates\n",
+    "for cord in listOfCordinates:\n",
+    "    print(cord)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -313,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,17 +343,18 @@
     "    K = max(labelc)\n",
     "    centres = []\n",
     "    \n",
-    "    for kk in range(K):\n",
+    "    for kk in range(K + 1):\n",
     "        clk = np.where(labelc == kk)[0]\n",
+    "        \n",
     "        nc = len(clk)\n",
     "        elemk = X[clk, :]\n",
-    "        \n",
+    "\n",
     "        if nc == 0:\n",
     "            print('At index ' + str(kk) + 'cluster is empty ')\n",
     "        elif nc == 1:\n",
     "            centres.append(elemk)\n",
     "        else:\n",
-    "            centres.append(np.mean(elemk))\n",
+    "            centres.append(np.mean(elemk, axis=0))\n",
     "         \n",
     "    centres = np.array(centres)\n",
     "    return centres"
@@ -339,29 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Create a 2D Numpy array from list of lists\n",
-    "arr2D = np.array([[11, 12, 13],\n",
-    "[14, 15, 16],\n",
-    "[17, 15, 11],\n",
-    "[12, 14, 15]])\n",
-    "\n",
-    "# Find index of minimum value from 2D numpy array\n",
-    "print('List of coordinates of minimum value in Numpy array : ')\n",
-    "# zip the 2 arrays to get the exact coordinates\n",
-    "listOfCordinates = np.where(arr2D == np.amin(arr2D, axis=0))[0]\n",
-    "# travese over the list of cordinates\n",
-    "for cord in listOfCordinates:\n",
-    "    print(cord)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,13 +382,12 @@
     "    bb = np.where(disto == np.amin(disto, axis=0))[0]\n",
     "    wc = sum(aa)\n",
     "    labelc = bb\n",
-    "    \n",
     "    return labelc, wc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,6 @@
     "    flag = 0\n",
     "    dd = sum(sum(np.multiply(Y, Y)))\n",
     "    membership = np.zeros((N, 1))\n",
-    "    \n",
     "    clusters = dict()\n",
     "    \n",
     "    while flag == 0:\n",
@@ -411,9 +410,10 @@
     "            membership = labelc\n",
     "    \n",
     "    centrestand = centre\n",
+    "    centrereal = []\n",
     "    \n",
     "    for ii in range(K):\n",
-    "        centrereal[ii, :] = np.multiply(centre[ii, :], range_in) + me\n",
+    "        centrereal.append(np.multiply(centre[ii, :], range_in) + me)\n",
     "    \n",
     "    wd = w * 100 / dd\n",
     "    clusters[1] = membership\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,12 +460,13 @@
     "    \n",
     "    cent = np.array(cent)\n",
     "    clusters, wd = k_means(sY, cent, range_in, me)\n",
-    "    # no report?"
+    "    # no report?\n",
+    "    return clusters, wd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -475,21 +476,16 @@
       "Hit 1 for NO normalization or just \"enter\"\n",
       "1\n",
       "Input cluster cardinality to discard \n",
-      "10\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-58-d6faa1ca8c7e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdata_in\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_iris\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mx_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_in\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mikmeansb\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_values\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-36-32c2f2c691fa>\u001b[0m in \u001b[0;36mikmeansb\u001b[1;34m(X, yvar)\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[0mcent\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m     \u001b[0mclusters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mk_means\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrange_in\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mme\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     32\u001b[0m     \u001b[1;31m# no report?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-38-802bba9de866>\u001b[0m in \u001b[0;36mk_means\u001b[1;34m(Y, cent, range_in, me)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[0mflag\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[0mlabelc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclusterupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabelc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmembership\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m             \u001b[0mflag\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-14-20b56fbe3994>\u001b[0m in \u001b[0;36mclusterupdate\u001b[1;34m(Y, cent)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mclusterupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mK\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mN\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;31m# why m again?\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mdisto\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+      "10\n",
+      "{1: array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "       0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+      "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+      "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+      "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+      "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2], dtype=int64), 2: array([[-0.83733333,  0.364     , -2.29466667, -0.95466667],\n",
+      "       [ 0.19833333, -0.25566667,  0.753     ,  0.24633333],\n",
+      "       [ 0.74916667, -0.0715    ,  1.73883333,  0.82383333]]), 3: [array([5.006, 3.418, 1.464, 0.244]), array([6.04166667, 2.79833333, 4.51166667, 1.445     ]), array([6.5925, 2.9825, 5.4975, 2.0225])]}\n"
      ]
     }
    ],
@@ -498,7 +494,8 @@
     "\n",
     "data_in = load_iris()\n",
     "x_values = data_in.data\n",
-    "ikmeansb(x_values, [])"
+    "clusters, wd = ikmeansb(x_values, [])\n",
+    "print(clusters)"
    ]
   },
   {
