--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of coordinates of minimum value in Numpy array : \n",
+      "0\n",
+      "0\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Create a 2D Numpy array from list of lists\n",
@@ -32,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,39 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.array([[2.0, 1.0], [1.0, 5.0], [3.0, 2.0]])\n",
     "cluster = [1, 2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.  3.5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def center(X, cluster):\n",
-    "    nn, mm = X.shape\n",
-    "    ccc = []\n",
-    "    for jj in range(mm):\n",
-    "        zz = np.array(X[:, jj])\n",
-    "        zc = zz[cluster]\n",
-    "        ccc.append(np.mean(zc, dtype=np.float32))\n",
-    "    \n",
-    "    return np.array(ccc)\n",
-    "\n",
-    "print(center(X, cluster))"
    ]
   },
   {
@@ -85,11 +69,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.17361111 0.59027778 0.27777778]\n"
+      "[2.  3.5]\n"
      ]
     }
    ],
    "source": [
+    "# OK\n",
+    "def center(X, cluster):\n",
+    "    nn, mm = X.shape # this order? rows > cols?\n",
+    "    ccc = []\n",
+    "    for jj in range(mm):\n",
+    "        zz = np.array(X[:, jj])\n",
+    "        zc = zz[cluster]\n",
+    "        ccc.append(np.mean(zc)) #, dtype=np.float32))\n",
+    "    \n",
+    "    return np.array(ccc)\n",
+    "\n",
+    "print(center(X, cluster))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n",
+      "[1.666666666666667, 2.666666666666667]\n",
+      "[0.20138889 0.45138889 0.47222222]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# OK\n",
     "def dist(X, remains, range_in, a):\n",
     "    nn, mm = X.shape\n",
     "    rr = len(remains)\n",
@@ -107,30 +122,34 @@
     "    return distan\n",
     "\n",
     "remains = np.array([*range(X.shape[0])])\n",
-    "range_in = []\n",
-    "me = []\n",
+    "range_in = [2, 4]\n",
+    "#me = []\n",
+    "me = [1.666666666666667, 2.666666666666667]\n",
     "\n",
-    "for j in range(X.shape[1]):\n",
-    "    range_in.append(max(X[:, j]) - min(X[:, j]))\n",
-    "    me.append(np.mean(X[:, j]))\n",
+    "# for j in range(X.shape[1]):\n",
+    "#     range_in.append(max(X[:, j]) - min(X[:, j]))\n",
+    "#     me.append(np.mean(X[:, j]))\n",
     "\n",
+    "print(range_in)\n",
+    "print(me)\n",
     "print(dist(X, remains, range_in, me))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.17361111 0.59027778 0.27777778]\n"
+      "[0.20138889 0.45138889 0.47222222]\n"
      ]
     }
    ],
    "source": [
+    "# rather OK\n",
     "def distm(X, remains, range_in, a):\n",
     "    nn, mm = X.shape\n",
     "    rr = len(remains)\n",
@@ -141,35 +160,35 @@
     "    ddz = np.multiply(dz, dz)\n",
     "    \n",
     "    if mm > 1:\n",
-    "        di = sum(ddz.T)\n",
+    "        di = sum(ddz.T)  # eg sum, dimensions?\n",
     "    else:\n",
     "        di = ddz.T\n",
     "    \n",
-    "    return np.array(di.T)\n",
+    "    return np.array(di.T) # T not necessary?\n",
     "\n",
-    "remains = np.array([*range(X.shape[0])])\n",
-    "range_in = []\n",
-    "me = []\n",
+    "# remains = np.array([*range(X.shape[0])])\n",
+    "# range_in = []\n",
+    "# me = []\n",
     "\n",
-    "for j in range(X.shape[1]):\n",
-    "    range_in.append(max(X[:, j]) - min(X[:, j]))\n",
-    "    me.append(np.mean(X[:, j]))\n",
+    "# for j in range(X.shape[1]):\n",
+    "#     range_in.append(max(X[:, j]) - min(X[:, j]))\n",
+    "#     me.append(np.mean(X[:, j]))\n",
     "\n",
     "print(distm(X, remains, range_in, me))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-2.        , -2.66666667])"
+       "array([-1.66666667, -2.66666667])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -190,12 +209,13 @@
        "array([0, 1, 2])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# rather OK\n",
     "def separc(X0, remains, range_in, a, b):\n",
     "    dista = distm(X0, remains, range_in, a)\n",
     "    distb = distm(X0, remains, range_in, b)\n",
@@ -208,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +242,7 @@
     }
    ],
    "source": [
+    "# rather OK\n",
     "def stand(X):\n",
     "    nn, mm = X.shape\n",
     "    print('Hit 1 for NO normalization or just \"enter\"')\n",
@@ -253,18 +274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[]\n",
       "(array([], dtype=int32), [0, 0])\n"
      ]
     }
    ],
    "source": [
+    "# rather OK\n",
     "def anpat(X, remains, range_in, centroid, me):\n",
     "    count = 0\n",
     "    key = 1\n",
@@ -287,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -296,13 +319,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{(0, 1): array([0, 1, 2]), (0, 2): array([-1.5       , -0.83333334]), (0, 3): array([[-675.        , -270.27027349],\n",
-      "       [-540.        , -400.00000477],\n",
-      "       [-900.        , -294.11765056]])}\n"
+      "{(0, 1): array([0, 1, 2]), (0, 2): array([-1.55208333, -0.88541667]), (0, 3): array([[-502.74003623, -266.80206795],\n",
+      "       [-481.79253472, -271.61654135],\n",
+      "       [-525.59185606, -267.98961424]])}\n"
      ]
     }
    ],
    "source": [
+    "# raczej OK\n",
     "def anomalous(X, me, range_in, D):\n",
     "    nn, mm = X.shape\n",
     "    remains = np.array([*range(nn)])\n",
@@ -311,13 +335,17 @@
     "    \n",
     "    while len(remains) > 0:\n",
     "        distance = dist(X, remains, range_in, me)\n",
+    "        #ind = np.where(distance == np.amax(distance, axis=0))[0]\n",
     "        ind = np.argmax(distance)\n",
+    "        #print(ind)\n",
     "        index = remains[ind]\n",
     "        centroid = X[index, :]\n",
+    "        \n",
     "        number += 1\n",
     "        cluster, centroid = anpat(X, remains, range_in, centroid, me)\n",
     "        #print(cluster, centroid)\n",
     "        ancl[(number, 1)] = cluster\n",
+    "        \n",
     "        censtand = np.divide(centroid - me, range_in)\n",
     "        dD = censtand * censtand.T * len(cluster) * 100 / D\n",
     "        ancl[(number, 2)] = censtand\n",
@@ -335,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,10 +404,12 @@
     "        Ck = np.tile(cc, (N, 1))\n",
     "        dif = Y - Ck\n",
     "        ddif = np.multiply(dif, dif)\n",
-    "        disto.append(np.array(np.sum(ddif, axis=1)).T)\n",
+    "        disto.append(np.array(np.sum(ddif, axis=1)))\n",
     "        \n",
     "    aa = np.amin(disto, axis=0)\n",
-    "    bb = np.where(disto == np.amin(disto, axis=0))[0]\n",
+    "    #print(disto)\n",
+    "    bb = np.argmin(disto, axis=0)\n",
+    "    #print(bb)\n",
     "    wc = sum(aa)\n",
     "    labelc = bb\n",
     "    return labelc, wc"
@@ -387,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -477,15 +507,15 @@
       "1\n",
       "Input cluster cardinality to discard \n",
       "10\n",
-      "{1: array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "       0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+      "{1: array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-      "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-      "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2], dtype=int64), 2: array([[-0.83733333,  0.364     , -2.29466667, -0.95466667],\n",
-      "       [ 0.19833333, -0.25566667,  0.753     ,  0.24633333],\n",
-      "       [ 0.74916667, -0.0715    ,  1.73883333,  0.82383333]]), 3: [array([5.006, 3.418, 1.464, 0.244]), array([6.04166667, 2.79833333, 4.51166667, 1.445     ]), array([6.5925, 2.9825, 5.4975, 2.0225])]}\n"
+      "       1, 1, 1, 1, 1, 1, 0, 2, 0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+      "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+      "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 0, 2, 0, 0, 0, 0, 2, 0, 0, 0,\n",
+      "       0, 0, 0, 2, 2, 0, 0, 0, 0, 2, 0, 2, 0, 2, 0, 0, 2, 2, 0, 0, 0, 0,\n",
+      "       0, 2, 0, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 2], dtype=int64), 2: array([[ 1.01051282,  0.02292308,  1.95671795,  0.85517949],\n",
+      "       [-0.83733333,  0.364     , -2.29466667, -0.95466667],\n",
+      "       [ 0.04027322, -0.31301639,  0.62985792,  0.23575956]]), 3: [array([6.85384615, 3.07692308, 5.71538462, 2.05384615]), array([5.006, 3.418, 1.464, 0.244]), array([5.88360656, 2.74098361, 4.38852459, 1.43442623])]}\n"
      ]
     }
    ],
