--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -1,22 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np"
+    "# Data Analysis and Mining 2018/ 2019\n",
+    "\n",
+    "## Fuzzy Clustering with Anomalous Patterns\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Study the fuzzy c-means (FCM) program in the software package of your choice.\n",
-    "Apply the program to your dataset at the same c parameter with random seeds. Do this for several different values of\n",
-    "parameter c= c_min, ..., c_max. Plot the FCM cost function versus c. Analyse the graphic and comment if any number of\n",
-    "clusters better fits your data than the others<br>\n"
+    "__Mitchell Galvao & Urszula Walińska__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Fuzzy c-means (FCM) program in the scikit-fuzzy software package__<br>\n",
+    "First, we have applied the program only to 2 selected features (Average Feedback on Resorts and Museums) from your dataset. We did it for several different values of parameter c (2, ..., 10) and visualised our results on the plots below.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
    ]
   },
   {
@@ -135,8 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) Implement the Anomalous Pattern (AP) clustering algorithm studied in the class. Test your implementation with the\n",
-    "benchmark data sets provided to you."
+    "__Implementation of the Anomalous Pattern (AP) clustering algorithm__"
    ]
   },
   {
@@ -444,6 +457,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Testing our implementation with the iris benchmark data set__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
@@ -530,10 +550,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) Take the Anomalous Clustering as the initialization algorithm to the fuzzy c-means and apply the\n",
-    "AnomalousPatterns_FCM (AP-FCM) to your data set. Discuss the options taken for setting the AP parameters.\n",
-    "Present and visualize the found fuzzy partitions of AP-FCM<br>\n",
-    "__First the k_means with AP__\n",
+    "As we can see, we have obtained similar and satisfying results for the iris data set without normalization and with cluster cardinality to discard equal 10."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Using Anomalous Clustering as the initialization algorithm to the fuzzy c-means and applying the\n",
+    "AnomalousPatterns_FCM to our data set__<br>\n",
     "\n",
     "Based on the Anomalous Pattern algorithm we want to find the anomalous clusters in ou dataset. So we have to preprocess the data by centering to a Reference point, typically grand mean. 0 is grand mean since that.\n",
     "\n",
@@ -542,9 +567,22 @@
     "2. Cluster update: if d(yi,c) < d(yi,0), assign yi to S.\n",
     "3. Centroid update: Within-S mean, c’.\n",
     "4. Stop condition: If c' != c, Go to step 2. with c c’;\n",
-    "Otherwise, halt.\n",
-    "\n",
-    "d)The local of the initial prototypes will be defined as the centroids farthest away from the center, and as we iterate on the algorithm the centroids will be updated until we meet the stop condition or apply threshold on the minimum cardinality of the cluster that we choose.\n"
+    "<br>\n",
+    "Otherwise, halt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The local of the initial prototypes will be defined as the centroids farthest away from the center, and as we iterate on the algorithm the centroids will be updated until we meet the stop condition or apply threshold on the minimum cardinality of the cluster that we choose."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we have applied k-means algorithm with Anomalous Pattern initialization to our data and this way we have also obtained the initial fuzzy c-partitioned matrix."
    ]
   },
   {
@@ -651,7 +689,7 @@
     "data = data[1:, 1:-1]\n",
     "clusters, wd, cent = ikmeansb(data, [])\n",
     "print(\"Clusters:\", clusters)\n",
-    "print(\"wd:\", wd)\n"
+    "print(\"wd:\", wd)"
    ]
   },
   {
@@ -942,7 +980,7 @@
     }
    ],
    "source": [
-    "ncenters = 9 # to compare with k_means\n",
+    "ncenters = 9\n",
     "\n",
     "cntr, u, u0, d, jm, p, fpc = fuzz.cluster.cmeans(\n",
     "    data, ncenters, 2, error=0.005, maxiter=7, init=cent)\n",
@@ -1204,7 +1242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
