--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -582,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we have applied k-means algorithm with Anomalous Pattern initialization to our data and this way we have also obtained the initial fuzzy c-partitioned matrix."
+    "First, we have applied k-means algorithm with Anomalous Pattern initialization (without normalization and with cluster cardinality to discard equal 10) to our data and we have got results presented below. This way we have also obtained the initial fuzzy c-partitioned matrix that we will use in fuzzy c-means method."
    ]
   },
   {
@@ -825,6 +825,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With parameter c = 9 we obtain these results:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {
@@ -992,8 +999,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "e) Apply, at least, two validation indices, like the Adjust Rand Index (ARI) and Xie-Beni, to access the quality of the fuzzy\n",
-    "c-partitions obtained in a). Compare these results with the one of AnomalousPatterns_FCM getting in c)."
+    "Where:\n",
+    "- cntr stands for cluster centers. Data for each center along each feature provided for every cluster (of the c requested clusters).\n",
+    "- u stands for final fuzzy c-partitioned matrix.\n",
+    "- u0 stands for initial guess at fuzzy c-partitioned matrix (either provided init or random guess used if init was not provided).\n",
+    "- d stands for final Euclidian distance matrix.\n",
+    "- jm stands for objective function history.\n",
+    "- p stands for number of iterations run.\n",
+    "- fpc stands for final fuzzy partition coefficient."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Applying indices (Xie-Beni and Partition Coefficient), to access the quality of the fuzzy c-partitions__"
    ]
   },
   {
@@ -1028,141 +1048,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Xie Beni Index: 1.5680701953267466\n",
-      "Partition Coefficient: 0.11169448423139945\n",
-      "Normalized Partition Coefficient: 0.11078712415400571\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Xie Beni Index:\", xb(data, fcm_get_u(data, u, m), u, m))\n",
-    "print(\"Partition Coefficient:\", pc(data, fcm_get_u(data, u, m), u, m))\n",
-    "print(\"Normalized Partition Coefficient:\", npc(data, fcm_get_u(data, u, m), u, m))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "// about number of iterations!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.77273623 2.16338142 0.793811   ... 1.28557659 0.22856999 0.61213658]\n",
-      " [2.41377082 3.16852425 1.53348732 ... 1.77305055 0.40262784 2.34789184]\n",
-      " [1.79809634 1.99516607 1.02382138 ... 1.18148152 0.75315142 1.19362066]\n",
-      " ...\n",
-      " [2.98920511 2.91918142 2.98884058 ... 2.98892096 3.07884977 3.02401208]\n",
-      " [1.80345764 1.86995918 1.26080413 ... 1.31552794 1.05494017 1.30268467]\n",
-      " [2.01694925 2.17631431 1.33006809 ... 1.45590883 1.11729368 1.49885782]] [[6.09490519e-02 9.46385597e-01 7.01562985e-02 2.71206115e-02\n",
-      "  7.56760034e-02 9.08281115e-05 8.91571999e-03 1.22056403e-02\n",
-      "  7.38511812e-03]\n",
-      " [2.61787899e-02 4.37655945e-03 4.60863127e-02 1.17231534e-02\n",
-      "  3.54494444e-02 9.99254148e-01 1.55024656e-02 2.35248315e-02\n",
-      "  5.84003963e-03]\n",
-      " [8.27797828e-02 1.38969387e-02 1.04890868e-01 2.89612789e-02\n",
-      "  1.01122679e-01 1.27086451e-04 9.58781663e-03 1.35431824e-02\n",
-      "  2.32968788e-02]\n",
-      " [1.05609641e-01 5.17958674e-03 4.30948417e-01 5.36573333e-02\n",
-      "  1.84056539e-01 5.74945513e-05 6.26586281e-03 8.07321484e-03\n",
-      "  3.53814276e-03]\n",
-      " [3.97243317e-01 5.86012953e-03 1.17302144e-01 1.12840491e-01\n",
-      "  3.46570284e-01 5.32889422e-05 6.03275423e-03 7.81485391e-03\n",
-      "  3.94755612e-03]\n",
-      " [2.20489447e-01 4.04691436e-03 8.33689708e-02 7.23767032e-01\n",
-      "  1.35061198e-01 3.68541797e-05 5.08726891e-03 6.41546739e-03\n",
-      "  2.66441799e-03]\n",
-      " [7.15255016e-03 9.88262399e-04 1.27986258e-02 3.77875159e-03\n",
-      "  8.01071795e-03 3.66022352e-05 9.24221775e-01 8.91913928e-01\n",
-      "  1.20437816e-03]\n",
-      " [5.12283381e-02 8.82814939e-03 5.78933665e-02 1.98173017e-02\n",
-      "  5.65306482e-02 1.33562603e-04 1.14540508e-02 1.68926796e-02\n",
-      "  9.24078131e-01]\n",
-      " [4.83690825e-02 1.04378622e-02 7.65549967e-02 1.83340461e-02\n",
-      "  5.75224871e-02 2.10135342e-04 1.29322862e-02 1.96162016e-02\n",
-      "  2.80453375e-02]] [[0.10242712 0.07342447 0.01499352 0.09140958 0.09784127 0.02681716\n",
-      "  0.09200138 0.06867177 0.05928287]\n",
-      " [0.10398963 0.20291214 0.10813659 0.09029166 0.19203874 0.25795471\n",
-      "  0.14780755 0.09726189 0.11971163]\n",
-      " [0.06639783 0.0166948  0.17446658 0.13349745 0.11015862 0.03899249\n",
-      "  0.15821611 0.13747003 0.11541343]\n",
-      " [0.1348562  0.11517091 0.18832442 0.0855865  0.13575722 0.05618671\n",
-      "  0.15628256 0.04259403 0.04922922]\n",
-      " [0.15633231 0.02863323 0.05796156 0.1333879  0.01921754 0.01299689\n",
-      "  0.10086941 0.05389998 0.18783903]\n",
-      " [0.18044018 0.19431998 0.16982858 0.11218142 0.00749054 0.15105459\n",
-      "  0.08393316 0.0075377  0.01993397]\n",
-      " [0.002992   0.13034907 0.05469938 0.15579312 0.1732507  0.101822\n",
-      "  0.05926999 0.26829403 0.17342778]\n",
-      " [0.1589258  0.04555477 0.06649979 0.14334867 0.07784231 0.24068668\n",
-      "  0.08973896 0.09011456 0.08081648]\n",
-      " [0.09363892 0.19294061 0.16508958 0.0545037  0.18640305 0.11348879\n",
-      "  0.11188088 0.23415601 0.19434558]] [[22.94744359  1.74638203 28.72325146 29.11827286 21.53358797 25.51730069\n",
-      "  59.66375403 49.58246078 18.73125613]\n",
-      " [35.01410296 25.68070238 35.43895875 44.28871978 31.46232234  0.24328027\n",
-      "  45.24685503 35.71454327 21.06384878]\n",
-      " [19.69045024 14.4116512  23.49081552 28.17776107 18.62821366 21.57224024\n",
-      "  57.53457721 47.07041171 10.54621827]\n",
-      " [17.43275414 23.60618243 11.58922219 20.70145198 13.8076531  32.07240513\n",
-      "  71.17022599 60.96563569 27.06187911]\n",
-      " [ 8.98854689 22.19318872 22.21334483 14.27522184 10.06235956 33.31396491\n",
-      "  72.53221983 61.96521055 25.62013827]\n",
-      " [12.06490437 26.70615142 26.34903498  5.63658359 16.11870675 40.05912869\n",
-      "  78.98533021 68.39025305 31.18490656]\n",
-      " [66.98650696 54.04271739 67.24891222 78.0083656  66.18503035 40.19676193\n",
-      "   5.86004144  5.80025235 46.38357198]\n",
-      " [25.03010401 18.08166743 31.61932043 34.06379963 24.91457655 21.04274712\n",
-      "  52.63919437 42.14626455  1.67452363]\n",
-      " [25.75928851 16.62905369 27.49667389 35.41491395 24.69884616 16.77626673\n",
-      "  49.53944442 39.1111786   9.61203382]] [1028.8616211   789.82421234  591.53333538  367.48755074  310.00945405\n",
-      "  250.43838657] 6 0.6230934942334253\n"
-     ]
-    }
-   ],
-   "source": [
-    "ncenters = 9\n",
-    "\n",
-    "cntr, u, u0, d, jm, p, fpc = fuzz.cluster.cmeans(\n",
-    "    data, ncenters, 2, error=0.005, maxiter=7, init=None)\n",
-    "\n",
-    "print(cntr, u, u0, d, jm, p, fpc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Xie Beni Index: 752.9030915765785\n",
-      "Partition Coefficient: 0.11278533136026639\n",
-      "Normalized Partition Coefficient: 0.1118790855291738\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Xie Beni Index:\", xb(data, fcm_get_u(data, u, m), u, m))\n",
-    "print(\"Partition Coefficient:\", pc(data, fcm_get_u(data, u, m), u, m))\n",
-    "print(\"Normalized Partition Coefficient:\", npc(data, fcm_get_u(data, u, m), u, m))"
+    "__Comparision of the results of fuzzy c-means algorithm with Anomalous Pattern and without it__"
    ]
   },
   {
@@ -1219,11 +1108,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As we can see, fuzzy c-means algorithm with Anomalous Patter initialization performs almost perfectly even after 7 interations. The value of Partition Coefficient is equal 1 (which is the best possible) no matter how many clusters do we want to have. The same goes for the value of Xie-Beni Index (the lower the better) which is also satisfying regardless the number of clusters. On the other hand, we can notice that our algorithm without AP initialization performs significantly worse. In case of the value of Xie-Bani Index, we can see that the less clusters we want to have, the better are results obtained."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another conclusion worth of being mentioned is about the number of iterations. Without AP initialization algorithm also performed well but only after high number of iterations. That is why, to be able to compare these 2 methods, in our analysis we have introduced a constraint of max iterations = 7."
+   ]
   }
  ],
  "metadata": {
@@ -1242,7 +1138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
